--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "karma start",
     "build": "rimraf public && webpack --config webpack.prod.js --progress --profile --bail",
     "postinstall": "typings install",
-    "lint": "tslint './dev/**/*.ts'",
+    "lint": "tslint ./dev/**/*.ts && eslint [./models, ./routes] --ext .js --ext .jsx --cache",
     "typings": "typings"
   },
   "repository": {
@@ -57,6 +57,7 @@
     "angular2-template-loader": "^0.4.0",
     "concurrently": "^2.2.0",
     "css-loader": "^0.23.1",
+    "eslint": "^3.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "favicons-webpack-plugin": "0.0.6",
     "file-loader": "^0.9.0",
