--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
     "@angular/router": "^3.0.0-rc.1",
     "@angular/upgrade": "^2.0.0-rc.5",
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "chalk": "^1.1.3",
