--- a/package.json
+++ b/package.json
@@ -45,12 +45,16 @@
     "bootstrap": "^3.3.7",
     "chalk": "^1.1.3",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.6",
     "debug": "^2.2.0",
     "dotenv": "^2.0.0",
     "es6-shim": "^0.35.1",
     "express": "^4.14.0",
+    "jwt-simple": "^0.5.0",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.11",
     "zone.js": "^0.6.12"
