--- a/package.json
+++ b/package.json
@@ -54,11 +54,15 @@
     "morgan": "^1.7.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.11",
+    "serve-favicon": "^2.3.0",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.2",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
     "concurrently": "^2.2.0",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
     "eslint": "^3.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
