--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "chalk": "^1.1.3",
+    "compression": "^1.6.2",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.6",
     "debug": "^2.2.0",
