--- a/package.json
+++ b/package.json
@@ -51,13 +51,12 @@
     "dotenv": "^2.0.0",
     "es6-shim": "^0.35.1",
     "express": "^4.14.0",
+    "helmet": "^2.1.2",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.11",
     "serve-favicon": "^2.3.0",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.2",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
