--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "chalk": "^1.1.3",
+    "ckeditor": "^4.5.10",
     "compression": "^1.6.2",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.6",
@@ -54,6 +55,7 @@
     "helmet": "^2.1.2",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
+    "multer": "^1.2.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.11",
     "serve-favicon": "^2.3.0",
