--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.11",
     "serve-favicon": "^2.3.0",
+    "spdy": "^3.4.0",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
