--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "es6-shim": "^0.35.1",
     "express": "^4.14.0",
     "helmet": "^2.1.2",
+    "memory-cache": "^0.1.6",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
